split ZimaPlatform and EngineDefinition